@@ -13,6 +13,14 @@ If you encounter any problems please use bitbucket bugtracker:
 
   https://bitbucket.org/albertnan/account_search_with_dot/issues
 
+If you encounter any problems with Tryton, please don't hesitate to ask
+questions on the Tryton bug tracker, mailing list, wiki or IRC channel:
+
+  http://bugs.tryton.org/
+  http://groups.tryton.org/
+  http://wiki.tryton.org/
+  irc://irc.freenode.net/tryton
+
 Documentation
 -------------
 
