@@ -1,1 +1,2 @@
+* Readme and Legal notice
 * Initial release
